# turboquant-rs

./: Cargo.toml  README.md
benches/: distortion_bench.rs
docs/superpowers/plans/: 2026-03-26-turboquant-rs.md
docs/superpowers/specs/: 2026-03-26-kv-cache-design.md  2026-03-26-turboquant-rs-design.md
src/: baseline.rs  codebook.rs  distortion.rs  lib.rs  lloyd_max.rs  qjl.rs  rotation.rs  turbo_mse.rs  turbo_prod.rs
tests/: test_baseline.rs  test_codebook.rs  test_distortion.rs  test_integration.rs  test_qjl.rs  test_rotation.rs  test_turbo_mse.rs  test_turbo_prod.rs
