[package]
name = "turboquant"
version = "0.1.0"
edition = "2021"
description = "Research implementation of TurboQuant vector quantization (ICLR 2026)"

[dependencies]
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"
rand_chacha = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "distortion_bench"
harness = false
